--- a/app/src/main/res/layout/fragment_random_quote.xml
+++ b/app/src/main/res/layout/fragment_random_quote.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    android:padding="@dimen/main_layout_padding">
+    android:padding="@dimen/main_layout_padding"
+    tools:context=".ui.fragments.RandomQuoteFragment">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cvRandomQuote"
