--- a/app/src/main/res/layout/fragment_single_quote.xml
+++ b/app/src/main/res/layout/fragment_single_quote.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/main_layout_padding">
+    android:padding="@dimen/main_layout_padding"
+    tools:context=".ui.fragments.SingleQuoteFragment">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cvSingleQuote"
@@ -88,12 +89,12 @@
         android:id="@+id/fabAddToFavorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/floating_action_button_margin"
         android:contentDescription="@string/add_to_favorite_button"
         android:src="@drawable/ic_favorite"
         app:borderWidth="0dp"
         app:elevation="0dp"
         app:fabSize="normal"
-        android:layout_margin="@dimen/floating_action_button_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
