--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/quoteListFragment">
     <action
@@ -35,4 +36,17 @@
         android:id="@+id/favoritesQuoteFragment"
         android:name="pl.glownia.maciej.stoicbreath.ui.fragments.FavoriteQuotesFragment"
         android:label="@string/favorites" />
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="pl.glownia.maciej.stoicbreath.ui.fragments.SettingsFragment"
+        android:label="Settings" />
+    <fragment
+        android:id="@+id/privacyPolicyFragment"
+        android:name="pl.glownia.maciej.stoicbreath.ui.fragments.PrivacyPolicyFragment"
+        android:label="Privacy Policy" /><action android:id="@+id/action_global_privacyPolicyFragment" app:destination="@id/privacyPolicyFragment"/>
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="pl.glownia.maciej.stoicbreath.ui.fragments.AboutFragment"
+        android:label="fragment_about"
+        tools:layout="@layout/fragment_about" />
 </navigation>
